Re-edited and now page working

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <button class="btn-menubars"><i class="fa-solid fa-bars-staggered"></i></button>
                 <div class="logotype">
-                    <a href="index.html"><img src="/images/logo.svg" alt="Logo for a company called Crito"></a>
+                    <a href="index.html"><img src="images/logo.svg" alt="Logo for a company called Crito"></a>
                 </div>
                 <div class="contactinformation-bar">
                     <div class="content-box">
@@ -74,7 +74,7 @@
                         <a class="btn-transparent btn-login" href="services.html">Learn More <i
                                 class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
-                    <img src="/images/Image.svg" alt="Image of a man in a suit holding a tablet">
+                    <img src="images/Image.svg" alt="Image of a man in a suit holding a tablet">
                 </div>
 
 
@@ -365,22 +365,22 @@
                     </div>
                     <div class="project-and-cases">
                         <a class="project" href="#">
-                            <img src="/images/article-image-1.png" alt="A man reading a business newspaper ">
+                            <img src="images/article-image-1.png" alt="A man reading a business newspaper ">
                             <h3>Grow Your Business</h3>
                             <div class="readmore">Read More <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
                         </a>
                         <a class="project" href="#">
-                            <img src="/images/article-image-2.png" alt="Apple pink products on a desk">
+                            <img src="images/article-image-2.png" alt="Apple pink products on a desk">
                             <h3>Why your client needs a responsive website</h3>
                             <div class="readmore">Read More <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
                         </a>
                         <a class="project" href="#">
-                            <img src="/images/article-image-3.png" alt="Desk with office supplies">
+                            <img src="images/article-image-3.png" alt="Desk with office supplies">
                             <h3>Educate your employees to get better results</h3>
                             <div class="readmore">Read More <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
                         </a>
                         <a class="project" href="#">
-                            <img src="/images/article-image-4.png" alt="Laptop with Business Intelligence Insights">
+                            <img src="images/article-image-4.png" alt="Laptop with Business Intelligence Insights">
                             <h3>Business Insights is a important piece of your business</h3>
                             <div class="readmore">Read More <i class="fa-solid fa-arrow-up-right-from-square"></i></div>
                         </a>
